# obssync

./: .gitignore  CHANGELOG.md  CLAUDE.md  COMPREHENSIVE_SYNC_ANALYSIS_REPORT.md  CREATE_MISSING_COUNTERPARTS.md  CREATE_MISSING_COUNTERPARTS_VALIDATION_REPORT.md  E2E_TEST_PLAN.md  IMPLEMENTATION_SUMMARY.md  LIVE_E2E_TEST.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PIPELINE_VALIDATION_COMPREHENSIVE_REPORT.md  PIPELINE_VALIDATION_REPORT.md  PRIORITY_MIGRATION_README.md  README.md  README_MIGRATION.md  REMINDERS_GATEWAY_IMPLEMENTATION.md  SYNC_VALIDATION_REPORT.md  TASK_VALIDATION_REPORT.md  TOOLS_OVERVIEW.md  _plan.txt  agents.md  app_config.py  app_tui_original.py  bidirectional_sync_test.py  bulk_migration.py  bulk_migration_simple.py  calendar_gateway.py  clean_duplicate_tasks.py  clean_reminders.py  clean_reminders_simple.py  comprehensive_analysis.py  comprehensive_performance_analysis.py  comprehensive_pipeline_validation.py  comprehensive_sync_test.py  config_migration.py  convert_vault_config.py  data_integrity_validator.py  debug_collection_counts.py  debug_duplication.py  debug_migration.py  (+56 more)
.claude/agents/: e2e-test-runner.md
.obs-sync/: .migrated_from_legacy
docs/: EVENTKIT_IDENTIFIER_MISMATCH.md  README.md  bugfix-tag-routing-query.md  deduplication-implementation.md  language_recommendations.md  tag-sync-implementation.md  testing.md
docs/architecture/: sqlite-reader-architecture.md  tag-sync-implementation.md
docs/bugs/: reminders-completion-timestamp-bug.md
obs_sync/: main.py
obs_sync/analytics/: __init__.py  hygiene.py  streaks.py
obs_sync/calendar/: __init__.py  daily_notes.py  gateway.py  tracker.py
obs_sync/commands/: __init__.py  automation.py  calendar.py  insights.py  install_deps.py  migrate.py  setup.py  sync.py  update.py
obs_sync/core/: __init__.py  config.py  exceptions.py  models.py  paths.py
obs_sync/obsidian/: __init__.py  parser.py  tasks.py  vault.py
obs_sync/reminders/: __init__.py  gateway.py  tasks.py
obs_sync/sync/: __init__.py  deduplicator.py  engine.py  matcher.py  resolver.py
obs_sync/utils/: __init__.py  date.py  insights.py  io.py  launchd.py  macos.py  prompts.py  suggestions.py  tags.py  text.py  venv.py
obs_tools/: __init__.py
obs_tools/commands/: __init__.py  app_tui.py  build_sync_links.py  collect_calendar_events.py  collect_obsidian_tasks.py  collect_reminders_tasks.py  create_missing_counterparts.py  discover_obsidian_vaults.py  discover_reminders_lists.py  ensure_anchors_for_plan.py  find_duplicate_tasks.py  fix_obsidian_block_ids.py  reset_obs_tools.py  setup.py  sync_calendar_to_daily_note.py  (+5 more)
scripts/: README.md
tests/: __init__.py  conftest.py  pytest.ini  test_calendar.py  test_create_missing_counterparts.py  test_dedup_link_cleanup.py  test_deduplication.py  test_duplicate_creation_fix.py  test_eventkit_macos.py  test_incremental_cache.py  test_insights_and_analytics.py  test_insights_command.py  test_install_deps_command.py  test_integration.py  test_link_persistence_fix.py  test_main.py  test_matching_algorithm.py  test_matching_fallbacks.py  test_multi_vault_summary.py  test_obsidian_tasks.py  test_path_migration.py  test_performance.py  test_reconfigure_integration.py  test_regression.py  test_reminders_manager.py  test_removal_integration.py  test_repeated_creation_fix.py  test_safe_io_concurrency.py  test_setup_fix.py  test_setup_normalization.py  test_sqlite_reader.py  test_suggestions.py  test_sync_config_helpers.py  test_tag_routing.py  test_tag_routing_comprehensive.py  test_tag_routing_scenarios.py  test_tag_sync.py  test_task_operations.py  test_update_command.py  test_url_matching.py  (+3 more)
tui/: REFACTORING_GUIDE.md  __init__.py  command_handler.py  config_service.py  controller.py  controller_refactored.py  data_cache_service.py  environment_validator.py  log_service.py  services.py  vault_organization_view.py  view.py
(+10 files in other folders)
